--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,35 +1,90 @@
 .greetingForm {
+    /*display: flex;*/
+    /*flex-direction: column;*/
 }
 
 .inputAndButtonContainer {
+    display: flex;
+    flex-direction: row;
 }
 
 .error {
+    ont-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    margin-top: 5px;
+    color: #CC0000;
 }
 
 .input {
+    box-sizing: border-box;
+    width: 372px;
+    height: 36px;
+    border-radius: 5px;
+    border: darkgrey solid 2px;
 }
 
 .input:focus {
+    border: 1px solid #D1D1D1;
+
 }
 
 .errorInput {
+    box-sizing: border-box;
+    width: 372px;
+    height: 36px;
+    border: 1px solid #CC0000;
+    border-radius: 5px;
 }
 
 .button {
+    cursor: pointer;
+    margin-left: 20px;
+    padding: 5px 24px;
+    gap: 10px;
+    width: 78px;
+    height: 36px;
+    background:#0066CC;
+    border-radius: 3px;
+    color: #FFFFFF;
+    border: none;
 }
 
 .button:focus {
+    background: #00cc22;
 }
 
 .button:active {
+  background: #cc0000;
 }
 
 .button:disabled {
+    opacity: 0.5;
+    background: #0066CC;
+    border: none;
 }
 
 .text {
+    width: 143px;
+    height: 17px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 10px;
+    margin-top: 25px;
 }
 
 .greeting {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
 }
+
