--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,6 +1,7 @@
 .button {
-    background-color: #0066cc;
+    /*background-color: #0066cc;*/
     border-radius: 2px;
+    border: #cc9c00 solid 5px;
 }
 
 .disabled {
