--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,69 @@
 .sidebar {
+    z-index: 2;
+    position: fixed;
+    width: 317px;
+    height: 720px;
+    left: -317px;
+    top: 0px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 40px rgba(29, 33, 38, 0.13), 0px 1px 2px rgba(29, 33, 38, 0.1);
+    border-radius: 0px;
+    transition: all 0.5s ease-in-out;
 }
 
 .sidebar.open {
+    position: fixed;
+    left: 0;
 }
 
 .background {
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    background: #000000;
+    opacity: 0.3;
 }
 
 .nav {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    height: 20vw;
+    justify-content: space-around;
+    margin-left: 100px;
 }
 
 .nav a {
+    font-family: 'Montserrat', serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000000;
+    text-decoration: none;
+
 }
 
 .nav a:hover {
+    color: #58ACFF;
 }
 
 .nav a.active {
+    color: #0059B2;
+    text-decoration: underline;
 }
+
 .close {
+    margin-top: 10px;
+    margin-left: 85%;
+    background-color: white;
+    border: none;
 }
 
 .close img {
+    width: 24px;
+    height: 24px;
 }
